# cloud-console

./: DEV_ENV_SETUP.md  README.md  setup.cfg  test_launcher.sh  ui_layout_concept.drawio
src/cloud_console/: cloud_console.py
tests/: test_about.py  test_launcher.py
