[metadata]
name = cloud_console
version = 0.0.2
author = Nico Coetzee
author_email = nicc777@gmail.com
description = An attempt to create a console based UI for viewing and managing cloud resources supporting popular public cloud vendors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicc777/cloud-console
project_urls =
    Bug Tracker = https://github.com/nicc777/cloud-console/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    boto3
    npyscreen

[options.packages.find]
where = src
